--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0",
-    "build": "quasar build"
+    "build": "npx quasar build -m spa"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
